# milkshake

./: Cargo.toml  README.md  index.html
src/: consts.rs  lib.rs  main.rs
